     * Some missions now state the distance to the target system (#1886)
     * Try harder to find a populated homeworld for a faction (#1860, #1792)
     * Clicking cancel from the Load dialog now returns you to the game (#1847, #1325)
     * Bulk ships are now only placed at orbital stations (#1890)
     * Improve building self-shadowing and lighting (#1898, #1811)

   * Script changes
     * New attribute StarSystem.explored (#1793, #1797)
     * Custom systems can now define gravpoints (#1701, #1074)

   * Fixes
     * Interpret galaxy density bitmap as unsigned values (#1818, #1813)
     * Invert mouse cursor movement in rear view (#1820)
     * Missions no longer vanish from view when other missions are completed
       (#1824, #1826, #1854, #1856)
     * Fix crash when switching away from settings screen after death (#1844,
       #1698, #1742)
     * Move SystemView time control buttons above the dash to work around
       input priority problems (#1853, #1851)
     * Fix occasional bug that could leave a trailing slash on some filesystem
       paths (#1843, #1486)
     * Fix division-by-zero bugs in missile AI (#1873, #1872)
     * Fix loading of player's criminal record and fines (#1877, #1874)
     * Selected systems are now always shown in the sector view (#1864)
     * Fix crash bug in Lua function SystemPath.DistanceTo
     * Fix long-broken mouse flight under Linux by disabling DGA. Set config
       option SDLUseDGAMouse=1 to revert to old behaviour (#1892, #5)
     * Fix system info view to ignore irrelevant mouse wheel scroll events (#1894)
     * Don't toggle labels and rotation damping while console is active (#1897, #1364)

   * UI changes
     * Improved appearance of Dropdown widget (#1789, #1766)
     * Fix layout of non-contributing widgets inside pack boxes (#1789)
     * UI widgets can now have keyboard shortcuts (#1821, #1841, #1840)

   * Internal changes
     * Improvements in text rendering performance (#1791)