@@ -23,6 +23,8 @@ Alpha 30
      * Clicking cancel from the Load dialog now returns you to the game (#1847, #1325)
      * Bulk ships are now only placed at orbital stations (#1890)
      * Improve building self-shadowing and lighting (#1898, #1811)
+     * Low/medium/high orbit altitudes reduced to be more likely to fit in
+       object frames (#1903)
 
    * Script changes
      * New attribute StarSystem.explored (#1793, #1797)
